--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -2,7 +2,8 @@
   <%= f.label :title %>
   <%= f.text_field :title %><br>
   <%= f.label :artist_name %>
-  <%= f.text_field :artist_name %>
+  <%= display_name(@song, @artist) %>
+  <%= artist_select(@song, @artist) %>
   <br />
 
   <%= f.submit %>
